postgres-macros/tests/fail/missing_variable.rs
fn main() {
    sqlm_macros::sql!("{id}");
}
