postgres-macros/tests/fail/missing_variable.stderr
error[E0425]: cannot find value `id` in this scope
 --> tests/fail/missing_variable.rs:2:5
  |
2 |     sqlm_macros::sql!("{id}");
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
  |
  = note: this error originates in the macro `sqlm_macros::sql` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing this function
  |
1 + use std::process::id;
  |
